Auto stash before merge of "master" and "origin/master"

--- a/EasyMed/app/src/main/res/values/strings.xml
+++ b/EasyMed/app/src/main/res/values/strings.xml
@@ -15,6 +15,16 @@ simplicidade e acessibilidade.<br />Esta aplicação não é um produto final, s
 	<string name="number_per_day_hour">Hora de toma inicial</string>
 	<string name="accept_button_text">Aplicar</string>
 	<string name="cancel_button_text">Anular</string>
+	<string name="_1">1</string>
+	<string name="_2">2</string>
+	<string name="_3">3</string>
+	<string name="_4">4</string>
+	<string name="_5">5</string>
+	<string name="_6">6</string>
+	<string name="_7">7</string>
+	<string name="_8">8</string>
+	<string name="_9">9</string>
+	<string name="_0">0</string>
 
 	<string-array name="planets_array">
 		<item>1 Vez por dia</item>
